sumo/tests/duarouter/flows/errors/vehicle_false_departspeed/errors.duarouter
Error: The loader for flow-files from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid departSpeed definition for vehicle 0;
 must be one of ("random", "max", or a float>0).
Quitting (on error).
